updated build system

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,9 @@ npm-debug.log
 Session.vim
 .netrwhist
 *~
+
+# .gitignore - the files to not push via git
+lib
+
+# .npmignore - the files to not push to NPM
+src/
