--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "name": "vua-redux",
-  "version": "1.0.0",
+  "version": "0.1.3",
   "description": "vue redux binding higher order component",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "compile": "babel -d lib/ src/",
+    "prepublish": "npm run compile"
   },
   "keywords": [
     "vue",
     "redux"
   ],
   "author": "Nadim Tuhin",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "babel-cli": "^6.14.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-stage-0": "^6.5.0"
+  }
 }
