--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "vue redux binding higher order component",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha \"./src/**/*.spec.js\" --compilers js:babel-core/register",
+    "test:watch": "npm test -- --watch",
     "compile": "babel -d lib/ src/",
     "prepublish": "npm run compile"
   },
@@ -18,5 +19,8 @@
     "babel-cli": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-0": "^6.5.0"
+  },
+  "dependencies": {
+    "lodash": "^4.16.1"
   }
 }
