--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vua-redux",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "vue redux binding higher order component",
   "main": "lib/index.js",
   "scripts": {
@@ -18,7 +18,9 @@
   "devDependencies": {
     "babel-cli": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
-    "babel-preset-stage-0": "^6.5.0"
+    "babel-preset-stage-0": "^6.5.0",
+    "expect": "^1.20.2",
+    "mocha": "^3.0.2"
   },
   "dependencies": {
     "lodash": "^4.16.1"
