--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-vue",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "description": "Vue Redux binding higher order component",
   "author": "Nadim Tuhin",
   "repository": {
@@ -31,5 +31,8 @@
     "babel-preset-stage-0": "^6.5.0",
     "expect": "^1.20.2",
     "mocha": "^3.0.2"
+  },
+  "dependencies": {
+    "lodash": "^4.17.4"
   }
 }
